hot fix: bug correction app bar height overflow

--- a/src/App.css
+++ b/src/App.css
@@ -100,7 +100,7 @@
   grid-template-rows: auto;
 }
 .top-bar{
-  height: 4.75rem;
+  height: 80px;
   background-color: white;
   box-shadow: 0 4px 6px -6px black;
   width: 100%;
